Ensure close button is always visible on the search component

--- a/src/scss/components/_search.scss
+++ b/src/scss/components/_search.scss
@@ -25,7 +25,7 @@
     color: $color-accent;
     font-size: 2em;
     height: 50px;
-    position: absolute;
+    position: fixed;
     right: $leading / 2;
     top: $leading / 2;
     width: 50px;
